bump to A2A version 1.0.0.CR1